# yt-dl-fast-api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  hello.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-publish.yaml
