[project]
name = "yt-dl-fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.12.1",
    "brotli>=1.2.0",
    "certifi>=2026.1.4",
    "click>=8.3.1",
    "fastapi>=0.128.0",
    "h11>=0.16.0",
    "httptools>=0.7.1",
    "idna>=3.11",
    "mutagen>=1.47.0",
    "pycryptodomex>=3.23.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "sniffio>=1.3.1",
    "starlette>=0.50.0",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.40.0",
    "uvloop>=0.22.1",
    "watchfiles>=1.1.1",
    "websockets>=16.0",
    "yt-dlp>=2026.1.29",
]
